[package]
name = "backedup"
version = "0.1.0"
authors = ["Andreas Liljeqvist <bonega@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
anyhow = "1.0.40"
lazy_static = "1.4.0"
termion = "1.5.6"
argh = "0.1.4"
thiserror = "1.0.24"
chrono = "0.4.19"
wildmatch = "2.0.0"
log = "0.4.14"
env_logger = "0.8.3"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1