[package]
name = "backedup"
version = "0.1.0"
authors = ["Andreas Liljeqvist <bonega@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
anyhow = "1.0.40"
lazy_static = "1.4.0"
termion = "1.5.6"
argh = "0.1.4"
thiserror = "1.0.24"
wildmatch = "2.0.0"
log = "0.4.14"
slog = "2.7.0"
slog-syslog = "0.12.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8.0"
toml = "0.5.8"
serde_derive = "1.0.125"
serde = "1.0.125"

[dev-dependencies]
chrono = "0.4.19"

[profile.release]
lto = true
codegen-units = 1